fixing a low permgen warning in scripts/sbt.sh